--- a/views/popup.html
+++ b/views/popup.html
@@ -8,7 +8,7 @@
 			<tr>
 				<th><img src="/media/icon48.png" /></a></th>
 				<td class="title-bar">
-					<p class="top-heading"><b>Sailthru Smart Browser Extension</b></p>
+					<p class="top-heading"><b>Sailthru Smart Browser Extension Lite</b></p>
 					<p class="top-heading">&#169; 2015 | Created by Joe Pikowski</p>
 				</td>
 			</tr>
@@ -26,9 +26,6 @@
 				</tr>
 				<tr>
 					<td class="example">st su blasts sending 766</td>
-				</tr>
-				<tr>
-					<td class="example">st db schedule.trigger c:842 {"status":"executed"} l:50</td>
 				</tr>
 				<tr>
 					<td class="example">st zd 147486</td>
