Lite Popup Adjustment

--- a/views/popup.html
+++ b/views/popup.html
@@ -16,7 +16,7 @@
 		<table>
 			<tbody>
 				<tr>
-					<td style="text-align:center"><b>MY, SU, DB, ZD, JIRA</b></td>
+					<td style="text-align:center"><b>MY, SU, ZD, JIRA</b></td>
 				</tr>
 				<tr>
 					<td><b>Examples:</b></td>
@@ -29,6 +29,9 @@
 				</tr>
 				<tr>
 					<td class="example">st zd 147486</td>
+				</tr>
+				<tr>
+					<td class="example">st jira SE-155</td>
 				</tr>
 			</tbody>
 		</table>
