--- a/views/popup.html
+++ b/views/popup.html
@@ -16,7 +16,7 @@
 		<table>
 			<tbody>
 				<tr>
-					<td style="text-align:center"><b>MY, SU, DB, ZD, JIRA</b></td>
+					<td style="text-align:center"><b>MY, SU, DB, ZD, JIRA, DOCS</b></td>
 				</tr>
 				<tr>
 					<td><b>Examples:</b></td>
